tests/snapshots/motion_edge_cases_test__w_tabs.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:7
Lines: 1

Buffer:
hello		[w]orld
