tests/snapshots/motion_edge_cases_test__zero_on_empty_line.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 3

Buffer:
hello
[ ]
world
